Release/v1.0 ajustes (#39)
* feat: filtro de idioma na listagem de livros

* feat: autenticacao com Google OAuth

* fix: hardcoda client_id do Google no provider do frontend

* Feature/sync adjustments (#27)

* fix: add @Async annotation to triggerSync(int startPage)

The overloaded triggerSync(int startPage) method was missing the
@Async annotation, causing the job to run synchronously on the
Tomcat thread pool instead of the dedicated gutendexSyncExecutor.
This allowed multiple concurrent sync executions and bypassed
the TaskRejectedException protection in JobController.

Generated with [Continue](https://continue.dev)

Co-Authored-By: Continue <noreply@continue.dev>

* feat: allow sync job to start from a specific page (#25)

Add startPage parameter to SyncAllGutendexBooksUseCase,
SyncGutendexJobService and JobController so the sync job
can resume from a specific page instead of always starting
from page 1.

- SyncAllGutendexBooksUseCase.execute(int startPage) added
- SyncGutendexJobService.triggerSync(int startPage) added
- JobController accepts ?page= query parameter (default 1)
- Tests for starting from custom page and default behavior

Generated with [Continue](https://continue.dev)

Co-Authored-By: Continue <noreply@continue.dev>

---------

Co-authored-by: Continue <noreply@continue.dev>

* feat: implementing user settings (#28)

* fix: fixing book progress (#29)

* Atualiza IP da EC2 para 3.138.110.168

* Feature/progress fix (#30)

* fix: fixing book progress

* fix: fixing reading progress

* ci(sonar): configure SonarQube integration in CI pipeline and add documentation (#31)

- Add SonarQube plugin and properties to pom.xml
- Update ci.yaml workflow with the SonarQube analysis step
- Create documentation containing the configuration step-by-step guide

Note: The pipeline will fail until the SONAR_TOKEN is generated and manually added to the GitHub repository Secrets.

* ci: fix pipeline tests and remove SonarCloud step

  - Remove SPRING_DATASOURCE env